--- a/index.html
+++ b/index.html
@@ -248,17 +248,20 @@
               </div>
               <div class="col-sm mx-auto">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-left" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text"><h6>Lorem ipsum dolor sit amet</h6>
+                      <p style="font-size: 10px;">Fashion has always been so temporary and uncertain. You can't keep up...</p>
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="col-sm mx-auto">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-left" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">
+                      <h6>Lorem ipsum dolor sit amet</h6>
+                      <p style="font-size: 10px;">Fashion has always been so temporary and uncertain. You can't keep up...</p>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -267,25 +270,31 @@
             <div class="row mt-4">
               <div class="col-sm mx-auto">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-left" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">
+                      <h6>Lorem ipsum dolor sit amet</h6>
+                      <p style="font-size: 10px;">Fashion has always been so temporary and uncertain. You can't keep up...</p>
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="col-sm mx-auto">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-left" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text"><h6>Lorem ipsum dolor sit amet</h6>
+                      <p style="font-size: 10px;">Fashion has always been so temporary and uncertain. You can't keep up...</p>
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="col-sm mx-auto">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-left" alt="...">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">
+                      <h6>Lorem ipsum dolor sit amet</h6>
+                      <p style="font-size: 10px;">Fashion has always been so temporary and uncertain. You can't keep up...</p>
+                      <h6>$206.47</h6><span>sasa</span>
+                    </p>
                   </div>
                 </div>
               </div>
