--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="card-body">
                       <h5 class="card-title" style="color: #927B7C">WOMEN'S CLOTHING</h5>
                       <p class="card-text"style="color: #F3B211">Get up to 40% off</p>
-                      <button type="button" class="btn btn-secondary">SHOP NOW!</button>
+                      <button type="button" class="btn btn-secondary rounded-0">SHOP NOW!</button>
                     </div>
                   </div>
                 </div>
@@ -174,7 +174,7 @@
                     <div class="card-body">
                       <h5 class="card-text" style="color: #927B7C">MEN'S CLOTHING</h5>
                       <p class="card-text" style="color: #F3B211">Get up to 40% off</p>
-                      <button type="button" class="btn btn-secondary">SHOP NOW!</button>
+                      <button type="button" class="btn btn-secondary rounded-0">SHOP NOW!</button>
                     </div>
                   </div>
                 </div>
@@ -186,7 +186,7 @@
                     <div class="card-body">
                       <h5 class="card-text" style="color: #927B7C">KID'S CLOTHING</h5>
                       <p class="card-text" style="color: #F3B211">Get up to 40% off</p>
-                      <button type="button" class="btn btn-secondary">SHOP NOW!</button>
+                      <button type="button" class="btn btn-secondary rounded-0">SHOP NOW!</button>
                     </div>
                   </div>
                 </div>
@@ -201,7 +201,7 @@
                     <div class="card-body">
                       <h5 class="card-text" style="color: #927B7C">LINGERIE</h5>
                       <p class="card-text" style="color: #F3B211">Get up to 40% off</p>
-                      <button type="button" class="btn btn-secondary">SHOP NOW!</button>
+                      <button type="button" class="btn btn-secondary rounded-0">SHOP NOW!</button>
                     </div>
                   </div>
                 </div>
@@ -225,7 +225,7 @@
                     <div class="card-body">
                       <h5 class="card-text" style="color: #927B7C">NEW ARRIVALS</h5>
                       <h5 class="card-text" style="color: #F3B211">2014</h5>
-                      <button type="button" class="btn btn-secondary">SHOP NOW!</button>
+                      <button type="button" class="btn btn-secondary rounded-0">SHOP NOW!</button>
                     </div>
                   </div>
                 </div>
