Added product page/category

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="card-body">
                       <h5 class="card-title" style="color: #927B7C">WOMEN'S CLOTHING</h5>
                       <p class="card-text"style="color: #F3B211">Get up to 40% off</p>
-                      <button type="button" class="btn btn-secondary rounded-0">SHOP NOW!</button>
+                      <button type="button" class="btn btn-secondary rounded-0" onclick="window.location.href='category/women.html'">SHOP NOW!</button>
                     </div>
                   </div>
                 </div>
@@ -515,13 +515,13 @@
                 <p class="card-text">
                   <h5>INFORMATION</h5>
                   <hr>
-                  <p><a href="">Specials</a></p>
-                  <p><a href="">New products</a></p>
-                  <p><a href="">Best sellers</a></p>
-                  <p><a href="">Our stores</a></p>
-                  <p><a href="">Contact us</a></p>
-                  <p><a href="">Pages configuration</a></p>
-                  <p><a href="">Sitemap</a></p>
+                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Specials</a></p>
+                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">New products</a></p>
+                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Best sellers</a></p>
+                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Our stores</a></p>
+                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Contact us</a></p>
+                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Pages configuration</a></p>
+                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Sitemap</a></p>
                 </p>
               </div>
             </div>
@@ -532,11 +532,11 @@
                   <p class="card-text">
                     <h5>MY ACCOUNT</h5>
                     <hr>
-                    <p><a href="">My orders</a></p>
-                    <p><a href="">My merchandise returns</a></p>
-                    <p><a href="">My credit slips</a></p>
-                    <p><a href="">My addresses</a></p>
-                    <p><a href="">My personal info</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My orders</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My merchandise returns</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My credit slips</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My addresses</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My personal info</a></p>
                   </p>
               </div>
             </div>
@@ -547,9 +547,9 @@
                   <p class="card-text">
                     <h5>FOLLOW US</h5>
                     <hr>
-                    <p><a href="">Facebook</a></p>
-                    <p><a href="">Twitter</a></p>
-                    <p><a href="">RSS</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Facebook</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Twitter</a></p>
+                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">RSS</a></p>
                   </p>
               </div>
             </div>
