--- a/product_page/product.html
+++ b/product_page/product.html
@@ -86,16 +86,19 @@
 		         			</div>
 
 		         			<div class="card mt-4">
-		         				<div class="card-header">Rating</div>
+		         				<div class="card-body">
+		         					<div class="card-text" style="position: top;">Rating</div>
+		         					<div class="card-text">Read Review (1)</div>
+		         				</div>
 		         			</div>
 
-		         			<h6 class="font-weight-bold mt-4" style="font-size: 12px;">Send to a friend (1)</h6>
-		         			<h6 class="font-weight-bold" style="font-size: 12px;">Print</h6>
+		         			<a href="#" class="font-weight-bold mt-5" style="font-size: 12px;color:grey;">Send to a friend</a><br>
+		         			<a href="#" class="font-weight-bold" style="font-size: 12px;color:grey;">Print</a>
 
 		         		</div>
 
 		         		<div class="col-md-3">
-		         			<div class="card">
+		         			<div class="card rounded-0">
 		         				<div class="card-body">
 		         					<h5 class="">$206.47</h5>
 		         					<div class="row">
@@ -115,9 +118,339 @@
 
 		         </div>
 
+		         <!-- Table Here -->
+		         <div class="card mt-5 border-bottom-0">
+		         	<div class="card-body">
+		         		<div class="card-text font-weight-bold">
+		         			DATA SHEET
+		         		</div>
+		         	</div>
+		         </div>
+
+		         <div class="card-group mt-2">
+		         	<div class="card border-left-0">
+		         		<div class="card-body">
+		         			<div class="card-text">
+		         				Width
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="card border-right-0">
+		         		<div class="card-body">
+		         			<div class="card-text">
+		         				100
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		         <div class="card-group">
+		         	<div class="card border-left-0">
+		         		<div class="card-body">
+		         			<div class="card-text">
+		         				Height
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="card border-right-0">
+		         		<div class="card-body">
+		         			<div class="card-text">
+		         				100
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		         <div class="card-group">
+		         	<div class="card border-left-0">
+		         		<div class="card-body">
+		         			<div class="card-text">
+		         				Weight
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="card border-right-0"">
+		         		<div class="card-body">
+		         			<div class="card-text">
+		         				100
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		         <!-- End Table -->
+
+		         <!--
+		         <div class="row mt-2">
+		         	<div class="col-md-5">
+		         		<div class="card border-left-0">
+		         			<div class="card-body">
+		         				<div class="card-text">Width</div>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-7">
+		         		<div class="card border-right-0">
+		         			<div class="card-body">
+		         				<div class="card-text">100</div>
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		         <div class="row">
+		         	<div class="col-md-5">
+		         		<div class="card border-left-0">
+		         			<div class="card-body">
+		         				<div class="card-text">Height</div>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-7">
+		         		<div class="card border-right-0">
+		         			<div class="card-body">
+		         				<div class="card-text">100</div>
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		     	-->
+		        
+		        <!-- Product Info -->
+		        <div class="card mt-5 border-bottom-0">
+		         	<div class="card-body">
+		         		<div class="card-text font-weight-bold">
+		         			MORE INFO
+		         		</div>
+		         	</div>
+		         </div>
+		         <div class="card border-0">
+		         	<div class="card-body">
+		         		<p class="card-text" style="font-size: 11px;">
+		         			Fashion has always been so temporary and uncertain. You can't keep up with it. This social phenomenon is very whimsical, thus we as the consumers always try to stay in touch with all the latest fashion tendencies. Obviously there is nothing wrong about it because fashion satisfies our willingness to be attractive. And also fashion is the detector of prosperity and social rank. So, our natural desire to wear fashionable clothes has many reasons such as historical, social and others. Therefore being fashionable costs a lot of money. But nowadays fashion is not such unavailable as it was a couple of centuries ago. We are lucky to have an opportunity to buy qualitative, fashionable and affordable clothes.
+		         		</p>
+		         	</div>
+		         </div>
+		         <!-- End product info -->
+
+		         <!-- Review -->
+		         <div class="card mt-5 border-bottom-0">
+		         	<div class="card-body">
+		         		<div class="card-text font-weight-bold">
+		         			REVIEWS
+		         		</div>
+		         	</div>
+		         </div>
+		         <div class="row">
+		         	<div class="col-md-2">
+		         		<div class="card border-0">
+		         			<div class="card-body">
+		         				<p class="card-text">
+		         					Grade
+		         				</p>
+		         				<h6 class="card-text font-weight-bold" style="font-size: 13px;">
+		         					MI
+		         				</h6>
+		         				<h6 class="card-text text-muted" style="font-size: 13px;">
+		         					03/13/2014
+		         				</h6>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-6">
+		         		<div class="card border-0 rounded-0" style="border-left: 1px solid #ABB2B9 !important;">
+		         			<div class="card-body">
+		         				<h6 class="card-text" style="font-size: 13px;">Lorem ipsum dolor sit amet</h6>
+		         				<p class="card-text" style="font-size: 11px;">
+		         					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+									Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		         				</p>
+		         				<p class="card-text" style="font-size: 11px;">1 out of 2 people found this review useful.</p>
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		         <!-- End review -->
+
+		         <!-- Accessories -->
+		         <div class="card mt-5 border-bottom-0 rounded-0">
+		         	<div class="card-body">
+		         		<div class="card-text font-weight-bold">
+		         			ACCESSORIES
+		         		</div>
+		         	</div>
+		         </div>
+		         <div class="row mt-4">
+		         	<div class="col-md-3">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/13-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum dolor...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         				<button type="button" class="btn btn-outline-warning rounded-0">Add to cart</button>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-3">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/19-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum dolor...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         				<button type="button" class="btn btn-outline-warning rounded-0">Add to cart</button>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-3">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/25-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum dolor...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         				<button type="button" class="btn btn-outline-warning rounded-0">Add to cart</button>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-3">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/31-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum dolor...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         				<button type="button" class="btn btn-outline-warning rounded-0">Add to cart</button>
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		         <!-- End Accessories -->
+
+		         <!-- Featured Products -->
+		         <div class="card mt-5 border-bottom-0 rounded-0">
+		         	<div class="card-body">
+		         		<div class="card-text font-weight-bold">
+		         			11 OTHER PRODUCTS IN THE SAME CATEGORY:
+		         		</div>
+		         	</div>
+		         </div>
+		         <div class="row mt-4">
+		         	<div class="col-md-2">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/13-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-2">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/19-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-2">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/25-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-2">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/31-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-2">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/7-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         			</div>
+		         		</div>
+		         	</div>
+		         	<div class="col-md-2">
+		         		<div class="card border-0">
+		         			<img class="card-img-top border rounded-0" src="../img/61-home_default.jpg" alt="Card image" >
+		         			<div class="card-body">
+		         				<h5 class="card-text font-weight-bold" style="font-size: 12px;">Lorem ipsum...</h5>
+		         				<h6 class="card-text" style="font-size: 12px;">$205.39</h6>
+		         			</div>
+		         		</div>
+		         	</div>
+		         </div>
+		         <!-- End Featured products -->
+
     		</div>
 
     	</div>
+
+    	<div class="container mt-4">
+	      <div class="row">
+	        <div class="col-sm mx-auto">
+	          <div class="card" style="background-color: #E1DFDF; border: none;">
+	            <div class="card-body">
+	              <p class="card-text">
+	                <h3 style="font-size: 50px;font-family: Comic Sans MS;">clothes</h3>
+	                <small>© 2019 RAFFYSHOP</small>
+	              </p>
+	            </div>
+	          </div>
+	        </div>
+	          <div class="col-sm mx-auto">
+	            <div class="card" style="background-color: #E1DFDF; border: none;">
+	              <div class="card-body">
+	                <p class="card-text">
+	                  <h5>INFORMATION</h5>
+	                  <hr>
+	                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Specials</a></p>
+	                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">New products</a></p>
+	                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Best sellers</a></p>
+	                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Our stores</a></p>
+	                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Contact us</a></p>
+	                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Pages configuration</a></p>
+	                  <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Sitemap</a></p>
+	                </p>
+	              </div>
+	            </div>
+	          </div>
+	          <div class="col-sm mx-auto">
+	            <div class="card" style="background-color: #E1DFDF; border: none;">
+	              <div class="card-body">
+	                  <p class="card-text">
+	                    <h5>MY ACCOUNT</h5>
+	                    <hr>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My orders</a></p>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My merchandise returns</a></p>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My credit slips</a></p>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My addresses</a></p>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">My personal info</a></p>
+	                  </p>
+	              </div>
+	            </div>
+	          </div>
+	          <div class="col-sm mx-auto">
+	            <div class="card" style="background-color: #E1DFDF; border: none;">
+	              <div class="card-body">
+	                  <p class="card-text">
+	                    <h5>FOLLOW US</h5>
+	                    <hr>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Facebook</a></p>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">Twitter</a></p>
+	                    <p><a href="" style="color: grey;font-size: 15px;font-family: Comic Sans MS;">RSS</a></p>
+	                  </p>
+	              </div>
+	            </div>
+	          </div>
+	      </div>
+	    </div>
 
     </div>
 
