--- a/task-1/product_page/product4.html
+++ b/task-1/product_page/product4.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>RaffyShop</title>
 </head>
@@ -36,6 +38,34 @@
     	<div class="card">
 
     		<div class="card-body">
+
+    			<!-- Header -->
+		          <div class="row">
+		            <div class="col-md mx-auto">
+		              <nav class="navbar navbar-expand-lg navbar-light bg-white">
+		                <a class="navbar-brand font-weight-bold" href="#" style="font-size: 55px;font-family: Comic Sans MS;">clothes</a>
+		              </nav>
+		            </div>
+		            <div class="col-md mx-auto">
+		              <form class="form-inline mt-4">
+		                <input class="form-control  rounded-0" type="search" placeholder="Search" style="width: 80%;" aria-label="Search">
+		                <button class="btn btn-warning  rounded-0" style="" type="submit"><i class="fas fa-search"></i></button>
+		              </form>
+		            </div>
+		            <div class="col-md mx-auto">
+		              <div class="dropdown mt-4" style="float: right;">
+		                <button class="btn btn-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		                  <i class="fas fa-shopping-cart"></i> Cart (empty)
+		                </button>
+		                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+		                  <a class="dropdown-item" href="#">Action</a>
+		                  <a class="dropdown-item" href="#">Another action</a>
+		                  <a class="dropdown-item" href="#">Something else here</a>
+		                </div>
+		              </div>
+		            </div>
+		          </div>
+		         <!-- End Header -->
 
     			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A6AAAA">
 		            <!--<a class="navbar-brand" href="#">Clothes</a>
@@ -68,7 +98,7 @@
 		         	<div class="row">
 		         		
 		         		<div class="col-md-5 border border-secondary">
-		         			<img src="../img/product_1.jpg" class="img-fluid" alt="Responsive image">
+		         			<img src="../img/25-thickbox_default.jpg" class="img-fluid" alt="Responsive image">
 		         		</div>
 
 		         		<div class="col-md-4">
@@ -79,26 +109,35 @@
 		         			<h6 class="font-weight-bold" style="font-size: 12px;">63 Items</h6>
 
 		         			<div class="row">
-		         				<div class="col-md-3 border-secondary" style="font-size: 12px;">Tweet</div>
-		         				<div class="col-md-3 border-secondary" style="font-size: 12px;">Share</div>
-		         				<div class="col-md-3 border-secondary" style="font-size: 12px;">Google+</div>
-		         				<div class="col-md-3 border-secondary" style="font-size: 12px;">Pinterest</div>
+		         				<form class="form-inline ml-3">
+		         					<button class="btn btn-outline-dark rounded-0 mr-sm-2"" style="font-size: 10px;"><i class="fab fa-twitter"></i> Twitter</button>
+		         					<button class="btn btn-outline-dark rounded-0 mr-sm-2"" style="font-size: 10px;"><i class="fab fa-facebook-f"></i> Facebook</button>
+		         					<button class="btn btn-outline-dark rounded-0 mr-sm-2"" style="font-size: 10px;"><i class="fab fa-google-plus-g"></i> Google+</button>
+		         					<button class="btn btn-outline-dark rounded-0 mr-sm-2"" style="font-size: 10px;"><i class="fab fa-pinterest"></i> Pinterest</button>
+		         				</form>
 		         			</div>
 
 		         			<div class="card mt-4">
 		         				<div class="card-body">
-		         					<div class="card-text" style="position: top;">Rating</div>
-		         					<div class="card-text">Read Review (1)</div>
+		         					<div class="card-text" style="position: top;">
+		         						<span class="heading">Rating</span>
+										<span class="fa fa-star checked" style="color: orange;"></span>
+										<span class="fa fa-star checked" style="color: orange;"></span>
+										<span class="fa fa-star checked" style="color: orange;"></span>
+										<span class="fa fa-star checked" style="color: orange;"></span>
+										<span class="fa fa-star"></span>
+		         					</div>
+		         					<div class="card-text mt-2" style="font-size: 13px;"> <i class="fas fa-comment-dots"></i> Read Review (1)</div>
 		         				</div>
 		         			</div>
 
-		         			<a href="#" class="font-weight-bold mt-5" style="font-size: 12px;color:grey;">Send to a friend</a><br>
-		         			<a href="#" class="font-weight-bold" style="font-size: 12px;color:grey;">Print</a>
+		         			<a href="#" class="font-weight-bold mt-5 ml-2" style="font-size: 12px;color:grey;">Send to a friend</a><br>
+		         			<a href="#" class="font-weight-bold ml-2" style="font-size: 12px;color:grey;">Print</a>
 
 		         		</div>
 
 		         		<div class="col-md-3">
-		         			<div class="card rounded-0">
+		         			<div class="card rounded-0 bg-light">
 		         				<div class="card-body">
 		         					<h5 class="">$206.47</h5>
 		         					<div class="row">
@@ -110,6 +149,18 @@
 		         						</div>
 		         					</div>
 		         					<h6 class="mt-4">Quantity</h6>
+	         						<div class="form-inline">
+         								<input type="text" style="width: 40%;" class="form-control form-control-sm rounded-0" id="exampleFormControlInput1">
+         								<button class="btn border rounded-0 my-2 my-sm-0 btn-sm"><i class="fas fa-plus"></i></button>
+         								<button class="btn border rounded-0 btn-sm"><i class="fas fa-minus"></i></button>
+									</div>
+									<form class="form-goup mt-4">
+										<button class="btn btn-primary btn-cart-1 border rounded-0"><i class="fas fa-shopping-cart"></i> Add to cart</button>
+									</form>
+
+									<img src="../img/payment-logo.png" class="img-responsive" style="width:100%;">
+
+									<h6 style="font-size: 13px;" class="mt-3"><i class="far fa-heart"></i> Add to my wishlist</h6>
 		         				</div>
 		         			</div>
 		         		</div>
@@ -241,8 +292,13 @@
 		         	<div class="col-md-2">
 		         		<div class="card border-0">
 		         			<div class="card-body">
-		         				<p class="card-text">
-		         					Grade
+		         				<p class="card-text" style="font-size: 11px;">
+		         					<span class="heading">Grade</span>
+									<i class="fa fa-star checked" style="color: orange;"></i>
+									<span class="fa fa-star checked" style="color: orange;"></span>
+									<span class="fa fa-star checked" style="color: orange;"></span>
+									<span class="fa fa-star checked" style="color: orange;"></span>
+									<span class="fa fa-star"></span>
 		         				</p>
 		         				<h6 class="card-text font-weight-bold" style="font-size: 13px;">
 		         					MI
