--- a/task-1/index.html
+++ b/task-1/index.html
@@ -609,7 +609,7 @@
                 <div class="card rounded-0" style="width: 18rem;">
                   <div class="card-body">
                     <p class="card-text">STORE INFORMATION</p>
-                    <p class="card-text" style="font-size: 9px;"><i class="fas fa-map-marker"></i> Company Inc., 8901 Marmora Road, Glasgow, D04 89GR</p>
+                    <p class="card-text" style="font-size: 9px;"><i class="fas fa-map-marker" style="color: yellow;"></i> Company Inc., 8901 Marmora Road, Glasgow, D04 89GR</p>
                     <p class="card-text" style="font-size: 9px;"><i class="fas fa-phone"></i> Call us now toll free: (800) 2345-6789</p>
                     <p class="card-text" style="font-size: 9px;"><i class="fas fa-envelope"></i> Customer support: support@example.com Press: pressroom@example.com</p>
                     <p class="card-text" style="font-size: 11px;"><i class="fab fa-skype"></i> Skype: sample-username</p>
