--- a/task-2/index.html
+++ b/task-2/index.html
@@ -472,7 +472,6 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- End Logo Carousel -->
 
 	<h2 class="mt-5 text-center"><b>LATEST NEWS</b></h2>
@@ -648,6 +647,11 @@
 		</div>
 	</div>
 	<!-- End footer -->
+
+	<!-- Bottom footer -->
+	<div class="bg-brown p-3 text-white">
+		<h6 class="f-avel mt-1 ml-6">Copyright © 2018 demo All Rights Reserved</h6>
+	</div> 
 	
 
 
@@ -658,6 +662,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <!-- JQuery Scripts -->
     <script>
     	$(document).ready(function(){
     		//hides the carousel controls
