--- a/task-2/product.html
+++ b/task-2/product.html
@@ -363,7 +363,8 @@
 		</span>
 		<form class="form-inline mt-4">
         	<input class="form-control  rounded-0" type="search" placeholder="Subscribe" style="width: 80%;margin-right: 10rem;" aria-label="Subscribe">
-        	<button class="btn my-2 btn-dark my-sm-0 rounded-0 f-avel text-white" type="submit">Subscribe!
+        	<button class="btn my-2 btn-dark my-sm-0 rounded-0 f-avel text-white" type="submit">
+        		Subscribe!
         	</button>
      	</form>
 	</nav>
