--- a/task-2/index.html
+++ b/task-2/index.html
@@ -57,37 +57,76 @@
 
 		<ul class="nav m-p">
 			<li class="nav-item">
-			   <a class="nav-link text-grey ico-1" href="#"><i class="far fa-heart"></i></a>
+			   <a class="nav-link text-grey ico-1" href="#">
+			   		<i class="far fa-heart"></i>
+			   </a>
 			</li>
 			<li class="nav-item">
-			   <a class="nav-link text-grey ico-1" href="#"><i class="fas fa-redo"></i></a>
+			   <a class="nav-link text-grey ico-1" href="#">
+			   		<i class="fas fa-redo"></i>
+			   </a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link ico-1" href="#"><i class="fas fa-shopping-bag"></i></a>
+				<a class="nav-link ico-1" href="#">
+					<i class="fas fa-shopping-bag"></i>
+				</a>
 			</li>
 		</ul>
 	</nav>
 
 	<!-- Navs -->
-		<nav class="navbar navbar-primary bg-primary p-2 justify-content-center">
-  			<a class="navbar-brand text-white" href="#" style="width: 260px;background-color: black;">
-    			<i class="fas fa-bars ml-2"></i>  TOP CATEGORIES
-  			</a>
-  			<form class="form-inline">
-    			<input class="form-control rounded-left" type="search" placeholder="Search" aria-label="Search">
-    			<div class="input-group-append">
-				    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
-				    <div class="dropdown-menu">
-				    	<a class="dropdown-item" href="#">Action</a>
-				    	<a class="dropdown-item" href="#">Another action</a>
-				    	<a class="dropdown-item" href="#">Something else here</a>
-				    	<div role="separator" class="dropdown-divider"></div>
-				    	<a class="dropdown-item" href="#">Separated link</a>
-				    </div>
-				</div>
-    			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  			</form>
-		</nav>	
+	<nav class="navbar navbar-primary bg-primary p-2 justify-content-center">
+		<div class="dropdown mr-3">
+			<button class="btn btn-secondary rounded-0 text-left" type="button" id="dropdownMenuButtonTopCag" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		    	<i class="fas fa-bars"></i> TOP CATEGORIES
+			</button>
+			<div class="dropdown-menu rounded-0" aria-labelledby="dropdownMenuButtonTopCag">
+				<a class="dropdown-item" href="#">FASHION</a>
+		    	<a class="dropdown-item" href="#">ELECTRONICS</a>
+		    	<a class="dropdown-item" href="#">BAGS</a>
+		    	<a class="dropdown-item" href="#">MOBILES</a>
+		    	<a class="dropdown-item" href="#">SAREES</a>
+		    	<a class="dropdown-item" href="#">TELEVISION</a>
+		    	<a class="dropdown-item" href="#">SUNGLASSES</a>
+		    	<a class="dropdown-item" href="#">WATCHES</a>
+			</div>
+		</div>
+		<form class="form-inline">
+			<input id="search-navbar" class="form-control rounded-pill-left" type="search" placeholder="Search products .." aria-label="Search">
+			<div class="dropdown">
+  				<button class="btn btn-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButtonCategories" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    				All Categories
+  				</button>
+  				<div class="dropdown-menu rounded-0" aria-labelledby="dropdownMenuButton" id="menuButtonCategories">
+    				<a class="dropdown-item" href="#">Uncategorized</a>
+    				<a class="dropdown-item" href="#">Accesories</a>
+    				<a class="dropdown-item" href="#">Bags</a>
+    				<a class="dropdown-item" href="#">Belts</a>
+    				<a class="dropdown-item" href="#">Clothing</a>
+    				<a class="dropdown-item" href="#">Dresses</a>
+    				<a class="dropdown-item" href="#">Electronics</a>
+    				<a class="dropdown-item" href="#">Fashion</a>
+    				<a class="dropdown-item" href="#">Favors</a>
+    				<a class="dropdown-item" href="#">Fitness Equipment</a>
+    				<a class="dropdown-item" href="#">Jewelry</a>
+    				<a class="dropdown-item" href="#">Mobile</a>
+    				<a class="dropdown-item" href="#">Outfits</a>
+    				<a class="dropdown-item" href="#">Sarees</a>
+    				<a class="dropdown-item" href="#">Shoes</a>
+    				<a class="dropdown-item" href="#">Sunglasses</a>
+    				<a class="dropdown-item" href="#">Televesion</a>
+    				<a class="dropdown-item" href="#">Wallet</a>
+    				<a class="dropdown-item" href="#">Watches</a>
+  				</div>
+			</div>
+			<button class="btn btn-dark my-2 my-sm-0 rounded-pill-right" type="submit">
+				<i class="fas fa-search" style="font-size: 16px;"></i>
+			</button>
+		</form>
+		<span class="navbar-text f-avel ml-3 text-center">
+    		10% on card & Upto 15% cashup
+  		</span>
+	</nav>
 	<!-- End Navs -->
 
 	<!-- Carousel -->
@@ -186,10 +225,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md">
-				<div class="card" id="item-1">
+				<div class="card card-hover" id="item-1">
 					<img class="card-img-top" src="img/15-7-1-300x300.jpg" alt="Card Image cap">
 					<div class="card-body">
-						<div class="card-text reveal" style="font-size: 10px;">
+						<div class="reveal" style="font-size: 10px;">
 							<center>
 								<span class="fa fa-star checked" style="color: orange;"></span>
 								<span class="fa fa-star checked" style="color: orange;"></span>
@@ -557,6 +596,7 @@
         	<button class="btn my-2 btn-dark my-sm-0 rounded-0 f-avel text-white" type="submit">Subscribe!
         	</button>
      	</form>
+     	<!-- -->
 	</nav>
 	<!-- End Navbar down -->
 
@@ -688,7 +728,7 @@
 
   			// Icons hover 
   			$("#ico-1").hover(function(){
-  				$("#ico-1-1").css("color","black");
+  				$("#ico-1-1").css("color","black").shake(3,7,800);
   			},
   				function() {
   					$("#ico-1-1").css("color","grey");
@@ -709,6 +749,28 @@
   				}
   			);
   			//End Icons Hover
+
+  			//Dropdown menu button
+  			$("#dropdownMenuButtonCategories").click(function(){
+  				$("#dropdownMenuButtonCategories").css("background-color", "white");
+  				$("#dropdownMenuButtonCategories").css("color", "#808B96");
+  				$("#dropdownMenuButtonCategories").css("border", ".1px solid orange");
+  				$("#dropdownMenuButtonCategories").css("box-shadow", "none");
+  			});
+
+  			jQuery.fn.shake = function(intShakes, intDistance, intDuration) {
+    			this.each(function() {
+        		$(this).css("position","relative"); 
+	        		for (var x=1; x<=intShakes; x++) {
+	        			$(this).animate({left:(intDistance*-1)}, (((intDuration/intShakes)/4)))
+	    				.animate({left:intDistance}, ((intDuration/intShakes)/2))
+	    				.animate({left:0}, (((intDuration/intShakes)/4)));
+	    			}
+  				});
+				return this;
+			};
+
+			
 
 		});
     </script>
