--- a/task-2/about.html
+++ b/task-2/about.html
@@ -195,7 +195,7 @@ have suffered alteration isome forijected humour</p>
 							<i class="fas fa-user"></i>
 							<h2><b>77</b></h2>
 							<h5>Happy Clients</h5>
-							<hr>
+							<hr style="width: 50px;">
 						</div>
 					</div>
 				</div>
@@ -207,7 +207,7 @@ have suffered alteration isome forijected humour</p>
 							<i class="fas fa-award"></i>
 							<h2><b>63</b></h2>
 							<h5>Award Winning</h5>
-							<hr>
+							<hr style="width: 50px;">
 						</div>
 					</div>
 				</div>
@@ -219,7 +219,7 @@ have suffered alteration isome forijected humour</p>
 							<i class="fas fa-project-diagram"></i>
 							<h2><b>160</b></h2>
 							<h5>Projects</h5>
-							<hr>
+							<hr style="width: 50px;">
 						</div>
 					</div>
 				</div>
@@ -231,7 +231,7 @@ have suffered alteration isome forijected humour</p>
 							<i class="fas fa-glass-martini-alt"></i>
 							<h2><b>245</b></h2>
 							<h5>Cups of Coffee</h5>
-							<hr>
+							<hr style="width: 50px;">
 						</div>
 					</div>
 				</div>
